fix: [CI-1862]: When open the content of a test suite, the titles get… (#4028)
* fix: [CI-1862]: When open the content of a test suite, the titles get truncated in the half of the of the column

* test: update snapshots

--- a/src/modules/70-pipeline/pages/execution/ExecutionTestView/BuildTests.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionTestView/BuildTests.module.scss
@@ -384,7 +384,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: calc(50vw - 500px);
+    width: calc(50vw - 375px);
     white-space: nowrap !important;
     flex-grow: 1;
   }
